# wordle-boss

./: CHANGELOG.rst  README.rst  meson.build  pyproject.toml  version.py
.github/workflows/: publish.yml
docs/: requirements.txt
docs/source/: algorithms.rst  changelog.rst  conf.py  index.rst  installation.rst  usage.rst
docs/source/api/: classes.rst  constants.rst  functions.rst
src/wordle_boss/: __init__.py  lists.py  long_list.txt  names.py  solvers.pyi  solversmodule.c  utils.c  utils.h
tests/: test_feedback.py  test_lists.py  test_solver.py  test_two_lists.py
